syntax = "proto3";


option java_multiple_files = true;
option java_package = "ds.examples.EnergyEfficiency";
option java_outer_classname = "Service2RenewablesImpl";

package EnergyEfficiency;

// Interface exported by the server.
service Service2Renewables {

  rpc turbineStatus(turbineRequest) returns (turbineResponse) {}//unary
  
  rpc hydroAverageValues(stream NumberMessage) returns (CalculateResponse) {}//client streaming

}

message turbineRequest {
	string turbine  = 1;
}

message turbineResponse {
	string turbineStatus  = 1;
}

message NumberMessage{
	float number = 1;
}

message CalculateResponse {
	float result = 1;
	string message = 2;
}

